turn website live

--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
 
                                     <center>
 
-                                        <a href="Mary%20pics/marywidended811web.jpg"><font color="#800040" size="4" face="Comic Sans MS"><img height="420" width="179" src="OLMlatestpics/maryweb.jpg"></font></a>
+                                        <a href="/animals.htm"><font color="#800040" size="4" face="Comic Sans MS"><img height="250" width="179" src="/images-09-2022/Jay-Grooters-Animal-01.jpg"></font></a>
                                     </center>									</td>
 
                                 <td>
 
                                     <center>
 
-                                        <a href="Divine%20Mercy%20Pics/divinemercy8511weblg.jpg"><font color="#800040" size="4" face="Comic Sans MS"><img height="429" width="179" src="OLMlatestpics/divinemercyweb.jpg"></font></a>
+                                        <a href="/flowers.htm"><font color="#800040" size="4" face="Comic Sans MS"><img height="250" width="179" src="/images-09-2022/Jay-Grooters-Catholic-Church-01.jpg"></font></a>
                                     </center>									</td>
 
                                 <td>
 
                                     <center>
 
-                                        <a href="St%20Michael%20pics/michael8511weblg.jpg"><img height="431" width="176" src="OLMlatestpics/michaelweb.jpg"></a>
+                                        <a href="/ourladyofthemountains.html"><img height="250" width="176" src="/images-09-2022/Jay-Grooters-Flowers-01.jpg"></a>
                                     </center>									</td>
                             </tr>
 
@@ -88,6 +88,53 @@
                                     <center>
 
                                         <font face="Comic Sans MS">Flowers</font></center>									</td>
+                            </tr>
+                      </table>
+                          <table border="0" cellpadding="4" cellspacing="2" width="800">
+
+                            <tr>
+
+                                <td>
+
+                                    <center>
+
+                                        <a href="/landscap.htm"><font color="#800040" size="4" face="Comic Sans MS"><img height="250" width="179" src="/images-09-2022/Jay-Grooters-Landscapes-01.jpg"></font></a>
+                                    </center>									</td>
+
+                                <td>
+
+                                    <center>
+
+                                        <a href="/allenspark.htm"><font color="#800040" size="4" face="Comic Sans MS"><img height="250" width="179" src="/images-09-2022/Jay-Grooters-Religious-01.jpg"></font></a>
+                                    </center>									</td>
+
+                                <!-- <td>
+
+                                    <center>
+
+                                        <a href="St%20Michael%20pics/michael8511weblg.jpg"><img height="250" width="176" src="/images-09-2022/Jay-Grooters-Flowers-01.jpg"></a>
+                                    </center>									</td> -->
+                            </tr>
+
+                            <tr>
+
+                                <td>
+
+                                    <center>
+
+                                        <font face="Comic Sans MS">Landscapes</font></center>									</td>
+
+                                <td>
+
+                                    <center>
+
+                                        <font face="Comic Sans MS">Religious</font></center>									</td>
+
+                                <!-- <td>
+
+                                    <center>
+
+                                        <font face="Comic Sans MS">Flowers</font></center>									</td> -->
                             </tr>
                       </table>
 
